--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div class="score-board">
           <div class="badges">
-            <div id="user-badge" class="badge">User</div>
-            <div id="cpu-badge" class="badge">Compu</div>
+            <div id="user-badge" class="badge">Tú</div>
+            <div id="cpu-badge" class="badge">Máquina</div>
           </div>
           <span id="user-score">0</span>:<span id="cpu-score">0</span>
         </div>
