--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <div class="modal">
       <div id="result" class="modal-content"></div>
     </div>
-    <script src="/js/script.js" defer></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
