added media queries

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <div class="background">
       <h1 id="title">Piedra, papel, tijera</h1>
-      <p id="instructions">Arrastra tu elección a la caja para jugar:</p>
+      <p id="instructions">Escoge tu jugada:</p>
       <section class="wrapper">
-        <div class="dropping-box"></div>
+        <!-- <div class="dropping-box"></div> -->
         <div class="dropping-elements">
           <img src="/img/piedra.png" class="elements" id="rock" alt="piedra" />
           <img src="/img/papel.png" class="elements" id="paper" alt="papel" />
