added emojis to modal

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <section class="wrapper">
         <!-- <div class="dropping-box"></div> -->
         <div class="dropping-elements">
-          <img src="/img/piedra.png" class="elements" id="rock" alt="piedra" />
-          <img src="/img/papel.png" class="elements" id="paper" alt="papel" />
+          <img src="/img/piedra.png" class="elements" id="piedra" alt="piedra" />
+          <img src="/img/papel.png" class="elements" id="papel" alt="papel" />
           <img
             src="/img/tijera.png"
             class="elements"
-            id="scissors"
+            id="tijeras"
             alt="tijeras"
           />
         </div>
