--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,6 +45,13 @@
     <!-- Modal -->
     <div class="modal">
       <div id="result" class="modal-content"></div>
+    </div>
+    <!-- Footer -->
+    <div class="footer">
+      <ul class="footer-links">
+        <li><a href="https://github.com/SaraiTC/" target="_blank"><i class="fab fa-github"></i>&nbspGithub</a></li>
+        <li><a href="https://twitter.com/sarai_dev" target="_blank"><i class="fab fa-twitter"></i>&nbspTwitter</a></li>
+      </ul>
     </div>
     <script src="/js/script.js"></script>
   </body>
