--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Piedra, papel, tijera</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="background">
@@ -53,6 +53,6 @@
         <li><a href="https://twitter.com/sarai_dev" target="_blank"><i class="fab fa-twitter"></i>&nbspTwitter</a></li>
       </ul>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
