--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <section class="wrapper">
         <!-- <div class="dropping-box"></div> -->
         <div class="dropping-elements">
-          <img src="/img/piedra.png" class="elements" id="piedra" alt="piedra" />
-          <img src="/img/papel.png" class="elements" id="papel" alt="papel" />
+          <img src="img/piedra.png" class="elements" id="piedra" alt="piedra" />
+          <img src="img/papel.png" class="elements" id="papel" alt="papel" />
           <img
-            src="/img/tijera.png"
+            src="img/tijera.png"
             class="elements"
             id="tijeras"
             alt="tijeras"
