--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <title>Piedra, papel, tijera</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="img/consola-de-juego.png" type="image/x-icon">
   </head>
   <body>
     <div class="background">
