--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,8 +49,8 @@
     <!-- Footer -->
     <div class="footer">
       <ul class="footer-links">
-        <li><a href="https://github.com/SaraiTC/" target="_blank"><i class="fab fa-github"></i>&nbspGithub</a></li>
-        <li><a href="https://twitter.com/sarai_dev" target="_blank"><i class="fab fa-twitter"></i>&nbspTwitter</a></li>
+        <li><a href="https://github.com/SaraiTC/" target="_blank" rel="noreferrer"><i class="fab fa-github"></i>&nbspGithub</a></li>
+        <li><a href="https://twitter.com/sarai_dev" target="_blank" rel="noreferrer"><i class="fab fa-twitter"></i>&nbspTwitter</a></li>
       </ul>
     </div>
     <script src="js/script.js"></script>
